--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,12 @@ seaborn = "*"
 plotly = "*"
 jupyter-contrib-nbextensions = "*"
 jupytext = "*"
+scikit-learn = "*"
+lightgbm = "*"
+shap = "*"
+tensorflow-data-validation = "*"
+typing = "*"
+jupyterthemes = "*"
 
 [requires]
 python_version = "3.7"
